alpha7.1:
1. Updated CyanogenMod sources from github
2. Added multitouch driver 2.4 [Gabriel-LG]
3. Update Xmister's recovery
4. Possible market error -18 [hotchili]
5. Sensor fixes [cadavre]
6. Possible Camera fix
7. Improved vibrator driver [Gabriel-LG]
8. video record color issue & voicedialer fix [vflashbird]

alpha7:
1. Updated CyanogenMod sources to 6.1.0-RC1
2. Applied video recording patch for camcoder [vflashbirdv]
3. Applied audio recording patch for compressed audio format [vflashbirdv]
4. Back to 5% battery driver
5. Applied kernel patches: memory control tweak, sound fix [antibyte]
6. Some installd & application install fix

alpha6.5: 20101019.165833
1. Updated CyanogenMod sources from github to recent version
2. Added more sound routes to BT headsets [DE-NISkA]
3. Add baudrate to speedup BT
4. Corrected directions for accel, pitch, roll (DE-NISkA)
5. Some script fixes: remount
6. Delete 98bthack, we don't need it

alpha6.4: 20101015.125310
1. Updated CyanogenMod sources from github to recent version
2. Applied volume control patch [vflashbirdv/DE-NISkA]
3. Google apps update: 20101008
4. Using Android/CyanogenMod Bluetooth with hacked brcm_patchram_plus
5. Using Androbot's Gallery3D instead of CM's
6. /system is now read-only, added ext&rfs supported remount command

alpha6.3: 20101011.095301
1. Updated CyanogenMod sources from github to recent version
2. rild port phase #1: using own rild with Samsung's libril.so -- needs testing
3. Fixed ARM optimalizations
4. Using DE-NISkA's sound sources -- please test it!
5. Applied qbanin's 1% step battery driver
6. Added antibyte/Xmister's recovery for better ext2/ext4 compatibility -- needs testing
7. Some init.rc fixes [ch33kybutt]  

alpha6.2: 20101004.143423 
1. Sensors are working! Big thanks goes to DE-NISkA
2. Completly new bluetooth implementation based on i5800 sources, same result: only pairing
3. Using DE-NISkA's sound sources, please test it!
4. Google apps update: 20100930