@@ -7,6 +7,7 @@ alpha7.1:
 6. Possible Camera fix
 7. Improved vibrator driver [Gabriel-LG]
 8. video record color issue & voicedialer fix [vflashbird]
+9. Google apps update: 20101020
 
 alpha7:
 1. Updated CyanogenMod sources to 6.1.0-RC1
